@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: a81c590c921476b45a5f6d1c80c9f04f
+NativeFormatImporter:
+  externalObjects: {}
+  mainObjectFileID: 100100000
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
