@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: c9d1dc0db56056446b1a9879b867673b
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
